--- a/module2_solution/css/stylesheet.css
+++ b/module2_solution/css/stylesheet.css
@@ -42,19 +42,19 @@ h1{
 }
 
 .table_sections{
-    background-color: #dddddd;
-    margin: 15px;
     border: 1px solid black;
+    background-color: #ffe6fb;
+    margin: 15px;
 }
 
 .title_text{
-    font-size: 1.25em;
+    border: 1px solid black;
+    background-color: #ffff00;
+    float: right;
     margin-right: -1px;
     margin-top: -1px;
     padding: 5px 10px;
-    float: right;
-    background-color: #ffff00;
-    border: 1px solid black;
+    font-size: 1.25em;
 }
 
 .table_text{
