--- a/module3_solution/css/styles.css
+++ b/module3_solution/css/styles.css
@@ -43,7 +43,6 @@ body {
     background-color: rgba(255,255,255,0.5)
 }
 ul li a{
-    text-align: center;
     border: 2px solid #ff7300;
     background-color: #ffb764;
     margin-bottom: -2px;
@@ -52,7 +51,7 @@ ul li a{
 /* main body */
 h2{
     margin-top: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     font-size: 2.2em;
 }
 .container-fluid{
@@ -60,9 +59,42 @@ h2{
     padding-right: 25px;
 }
 #main_text{
-    background-color: #ffe8ce;
+    margin-bottom: 15px;
 }
 h3{
-    margin-top: 10px;
     font-size: 1.5em;
+}
+
+/* optional stuff */
+.row_section{
+    padding-bottom: 30px;
+}
+#chicken_row, #beef_row, #sushi_row{
+    padding: 15px;
+    position: relative;
+    height: 750px;
+}
+#chicken_row{
+    background-color: #e4b773;
+}
+#beef_row{
+    background-color: #c2955e;
+}
+#sushi_row{
+    background-color: #f0a276;
+}
+.text_class{
+    height: 660px;
+    overflow: auto;
+}
+.back_to_top_link{
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translate(-50%,0%);
+    color: rgba(0,0,0,0.5);
+}
+.back_to_top_link:hover, .back_to_top_link:focus{
+    text-decoration: none;
+    color: rgba(0,0,0,0.7);
 }
